2004-09-22	blytkerchan
	* Makefile.in.in: add -c to $(AS)'s command-line options when
	assembling .S to .o files

2004-09-21	blytkerchan
	* Makefile.in.in: add a vpath for .S files
	remove references to C++ compiler
	remove references to stuff from Jail we don't use (e.g. pthreads..)
	add @DEFS config variable to CPPFLAGS
	to generate *_OBJ, use *.c and *.S, no .l, .y or .cc files
	generate .d files from .S files
	ditto for .o files
	set AS to @CC@
	* bootstrap.sh: add kernel to modules

2004-09-20	blytkerchan
	* bootstrap.sh (gen_configure_ac): new bootstrap var BUILD_KERNEL
	* configure.ac.in: ditto

	* Makefile.in.in [real_all]: add kernel
	* bootstrap.sh (gen_makefile_in): add $$__KERNEL__$$ bootstrap var
	add diff modules for the kernel
	(gen_link_mk): add halos target to link.mk

	* configure.ac.in: trim down to bare minimum

2004-09-18	blytkerchan
	* Makefile.in.in [real_all]: make all programs have a .exe extention
	when building - to avoid conflicts with directory names
	* bootstrap.sh (gen_link_mk): reflect above

2004-09-17	blytkerchan
	* bootstrap.sh: rename from bootstrap

	* config.sub: new file
	* config.guess: ditto
	* install-sh: ditto
	* Makefile.in.in [MODULES]: add $$__MODULES__$$ bootstrap variable
	[real_all]: add $(PROGRAMS) as a dependency
	* bootstrap (gen_makefile_in): generate $$__MODULES__$$ bootstrap var
	(main-level code): don't locate & copy install-sh: it's in CVS now

2004-09-16	blytkerchan	towards a working build
	* Makefile.in.in: remove all references to libtool
	* bootstrap (gen_link_mk): use $(OBJ) in stead of $(OBJS)
	remove all references to libtool and autoheader
	* configure.ac.in: remove all references to automake and libtool
	* depend.sh: new file

	* bootstrap: new file
	* configure.ac.in: ditto
	* Makefile.in.in: ditto

2004-09-06	blytkerchan
	* i386/: new directory
